<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.main.view.AboutFragment">

    <ProgressBar
        android:id="@+id/loadBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:visibility="gone"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/aboutCoin"

        android:visibility="gone"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp">

            <ImageView
                android:id="@+id/iconCoin"

                android:layout_width="90dp"
                android:layout_height="90dp"

                android:contentDescription="@string/icon_coin"

                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:id="@+id/textTitle"

                android:layout_width="wrap_content"
                android:layout_height="23dp"

                android:text="@string/text_title"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:textStyle="bold"

                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@id/iconCoin"
                app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                android:id="@+id/descriptionCoin"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:textSize="16sp"
                android:textColor="@color/black"

                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@id/textTitle"
                app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                android:id="@+id/textSubTitle"

                android:layout_width="wrap_content"
                android:layout_height="23dp"

                android:text="@string/text_sub_title"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:textStyle="bold"

                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@id/descriptionCoin"
                app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                android:id="@+id/categoriesCoin"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:textSize="16sp"
                android:textColor="@color/black"

                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@id/textSubTitle"
                app:layout_constraintStart_toStartOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>


    <LinearLayout
        android:id="@+id/errorLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:visibility="gone">

        <ImageView
            android:layout_width="120dp"
            android:layout_height="120dp"

            android:src="@drawable/icon_error"

            android:layout_gravity="center"
            android:contentDescription="@string/icon_error" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/text_error"
            android:fontFamily="@font/plusjakartasans"
            android:textColor="@color/black"
            android:textSize="14sp"

            android:layout_marginTop="13dp"
            android:layout_gravity="center"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/text_error_two"
            android:fontFamily="@font/plusjakartasans"
            android:textColor="@color/black"
            android:textSize="14sp"


            android:layout_gravity="center"/>

        <Button
            android:id="@+id/tryAgain"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginTop="32dp"
            android:text="@string/text_button_try_again"
            android:layout_gravity="center"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>