<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.main.view.ListFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBar"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:background="@color/white"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent">

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/chipGroup"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                app:singleSelection="true"

                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <com.google.android.material.chip.Chip
                    android:id="@+id/usdChip"

                    android:text="@string/usd_chip"
                    android:textAlignment ="center"

                    android:layout_width="89dp"
                    android:layout_height="wrap_content"

                    style="@style/CustomStyleChip"

                    android:layout_marginStart="16dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="parent"/>

                <com.google.android.material.chip.Chip
                    android:id="@+id/eurChip"

                    android:text="@string/eur_chip"
                    android:textAlignment ="center"

                    style="@style/CustomStyleChip"

                    android:layout_width="89dp"
                    android:layout_height="wrap_content"

                    android:layout_marginStart="8dp"
                    app:layout_constraintStart_toEndOf="@id/usdChip"
                    app:layout_constraintTop_toBottomOf="parent"/>

            </com.google.android.material.chip.ChipGroup>
    </com.google.android.material.appbar.AppBarLayout>

        <ProgressBar
            android:id="@+id/loadBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:visibility="gone"

            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/listCoin"

            android:layout_width="0dp"
            android:layout_height="0dp"

            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"

            app:layout_constraintTop_toBottomOf="@id/appBar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <LinearLayout
            android:id="@+id/errorLayout"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:gravity="center"
            android:visibility="gone"

            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <ImageView
                android:layout_width="120dp"
                android:layout_height="120dp"

                android:src="@drawable/icon_error"

                android:layout_gravity="center"
                android:contentDescription="@string/icon_error" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/text_error"
                android:fontFamily="@font/plusjakartasans"
                android:textColor="@color/black"
                android:textSize="14sp"

                android:layout_marginTop="13dp"
                android:layout_gravity="center"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/text_error_two"
                android:fontFamily="@font/plusjakartasans"
                android:textColor="@color/black"
                android:textSize="14sp"


                android:layout_gravity="center"/>

            <Button
                android:id="@+id/tryAgain"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginTop="32dp"
                android:text="@string/text_button_try_again"
                android:layout_gravity="center"/>
        </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
